fix: fixed the overflow scroll on subs-explorer

--- a/src/app/components/landing/plats-explorer/subs-explorer/subs-explorer.component.css
+++ b/src/app/components/landing/plats-explorer/subs-explorer/subs-explorer.component.css
@@ -3,7 +3,7 @@
 }
 
 .subscriptions-container {
-    overflow: scroll;
+    overflow: hidden;
 
     & .subscriptions-section {
         display: flex;
